# CursorDump

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  _config.yml  install.sh  llms-full.txt  llms.txt
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DataFlow.md  KnowledgeBase.md  Overview.md  README.md  UserGuide.md  api.md  architecture.md  backup.md  exporting.md  faq.md  getting-started.md  knowledge-base.md  troubleshooting.md
src/: backup.rs  lib.rs  main.rs  media.rs  model.rs  parser.rs  scanner.rs  search.rs
src/export/: clean.rs  cpt.rs  manifest.rs  mod.rs  secrets.rs  sft.rs  subagent.rs
src/server/: api.rs  mod.rs
src/server/ui/: app.css  app.js  index.html
tests/: adversarial_fixtures.rs  export_integration.rs  search_integration.rs  server_api.rs  subagent_export.rs  turn_semantics.rs
